--- a/tools/analysis/Makefile.am
+++ b/tools/analysis/Makefile.am
@@ -147,6 +147,8 @@ libanalyses_la_SOURCES += include/analyses/ATLAS_13TeV/atlas_1712_02304.h src/an
 libanalyses_la_SOURCES += include/analyses/CMS_13TeV/cms_1801_01846.h src/analyses/CMS_13TeV/cms_1801_01846.cc
 libanalyses_la_SOURCES += include/analyses/ATLAS_13TeV/atlas_1803_02762.h src/analyses/ATLAS_13TeV/atlas_1803_02762.cc
 libanalyses_la_SOURCES += include/analyses/CMS_13TeV/cms_1801_03957.h src/analyses/CMS_13TeV/cms_1801_03957.cc
+libanalyses_la_SOURCES += include/analyses/CMS_13TeV/cms_1803_05485.h src/analyses/CMS_13TeV/cms_1803_05485.cc
+libanalyses_la_SOURCES += include/analyses/CMS_13TeV/cms_1803_06292.h src/analyses/CMS_13TeV/cms_1803_06292.cc
 #@@extraanalysis@@
 
 libanalyses_la_LDFLAGS = -avoid-version -shared
