--- a/tools/analysis/Makefile.in
+++ b/tools/analysis/Makefile.in
@@ -250,7 +250,9 @@ am_libanalyses_la_OBJECTS = src/global/Global.lo \
 	src/analyses/ATLAS_13TeV/atlas_1712_02304.lo \
 	src/analyses/CMS_13TeV/cms_1801_01846.lo \
 	src/analyses/ATLAS_13TeV/atlas_1803_02762.lo \
-	src/analyses/CMS_13TeV/cms_1801_03957.lo
+	src/analyses/CMS_13TeV/cms_1801_03957.lo \
+	src/analyses/CMS_13TeV/cms_1803_05485.lo \
+	src/analyses/CMS_13TeV/cms_1803_06292.lo
 libanalyses_la_OBJECTS = $(am_libanalyses_la_OBJECTS)
 AM_V_lt = $(am__v_lt_@AM_V@)
 am__v_lt_ = $(am__v_lt_@AM_DEFAULT_V@)
@@ -756,7 +758,11 @@ libanalyses_la_SOURCES = src/global/Global.cc src/include/Global.h \
 	include/analyses/ATLAS_13TeV/atlas_1803_02762.h \
 	src/analyses/ATLAS_13TeV/atlas_1803_02762.cc \
 	include/analyses/CMS_13TeV/cms_1801_03957.h \
-	src/analyses/CMS_13TeV/cms_1801_03957.cc
+	src/analyses/CMS_13TeV/cms_1801_03957.cc \
+	include/analyses/CMS_13TeV/cms_1803_05485.h \
+	src/analyses/CMS_13TeV/cms_1803_05485.cc \
+	include/analyses/CMS_13TeV/cms_1803_06292.h \
+	src/analyses/CMS_13TeV/cms_1803_06292.cc
 #@@extraanalysis@@
 libanalyses_la_LDFLAGS = -avoid-version -shared
 #-module 
@@ -1281,6 +1287,12 @@ src/analyses/ATLAS_13TeV/atlas_1803_02762.lo:  \
 src/analyses/CMS_13TeV/cms_1801_03957.lo:  \
 	src/analyses/CMS_13TeV/$(am__dirstamp) \
 	src/analyses/CMS_13TeV/$(DEPDIR)/$(am__dirstamp)
+src/analyses/CMS_13TeV/cms_1803_05485.lo:  \
+	src/analyses/CMS_13TeV/$(am__dirstamp) \
+	src/analyses/CMS_13TeV/$(DEPDIR)/$(am__dirstamp)
+src/analyses/CMS_13TeV/cms_1803_06292.lo:  \
+	src/analyses/CMS_13TeV/$(am__dirstamp) \
+	src/analyses/CMS_13TeV/$(DEPDIR)/$(am__dirstamp)
 
 libanalyses.la: $(libanalyses_la_OBJECTS) $(libanalyses_la_DEPENDENCIES) $(EXTRA_libanalyses_la_DEPENDENCIES) 
 	$(AM_V_CXXLD)$(libanalyses_la_LINK) -rpath $(mylibdir) $(libanalyses_la_OBJECTS) $(libanalyses_la_LIBADD) $(LIBS)
@@ -1404,6 +1416,8 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/CMS_13TeV/$(DEPDIR)/cms_1711_00431.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/CMS_13TeV/$(DEPDIR)/cms_1801_01846.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/CMS_13TeV/$(DEPDIR)/cms_1801_03957.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@src/analyses/CMS_13TeV/$(DEPDIR)/cms_1803_05485.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@src/analyses/CMS_13TeV/$(DEPDIR)/cms_1803_06292.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/CMS_13TeV/$(DEPDIR)/cms_pas_sus_15_011.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/CMS_13TeV/$(DEPDIR)/cms_sus_16_025.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/CMS_13TeV/$(DEPDIR)/cms_sus_16_039.Plo@am__quote@
