--- a/tools/analysis/Makefile.am
+++ b/tools/analysis/Makefile.am
@@ -149,6 +149,11 @@ libanalyses_la_SOURCES += include/analyses/ATLAS_13TeV/atlas_1803_02762.h src/an
 libanalyses_la_SOURCES += include/analyses/CMS_13TeV/cms_1801_03957.h src/analyses/CMS_13TeV/cms_1801_03957.cc
 libanalyses_la_SOURCES += include/analyses/CMS_13TeV/cms_1803_05485.h src/analyses/CMS_13TeV/cms_1803_05485.cc
 libanalyses_la_SOURCES += include/analyses/CMS_13TeV/cms_1803_06292.h src/analyses/CMS_13TeV/cms_1803_06292.cc
+libanalyses_la_SOURCES += include/analyses/CMS_13TeV/cms_1806_05264.h src/analyses/CMS_13TeV/cms_1806_05264.cc
+libanalyses_la_SOURCES += include/analyses/CMS_13TeV/cms_1806_05246.h src/analyses/CMS_13TeV/cms_1806_05246.cc
+libanalyses_la_SOURCES += include/analyses/CMS_13TeV/cms_1806_04771.h src/analyses/CMS_13TeV/cms_1806_04771.cc
+libanalyses_la_SOURCES += include/analyses/CMS_13TeV/cms_1805_04865.h src/analyses/CMS_13TeV/cms_1805_04865.cc
+libanalyses_la_SOURCES += include/analyses/CMS_13TeV/cms_1807_02048.h src/analyses/CMS_13TeV/cms_1807_02048.cc
 #@@extraanalysis@@
 
 libanalyses_la_LDFLAGS = -avoid-version -shared
