--- a/tools/analysis/Makefile.in
+++ b/tools/analysis/Makefile.in
@@ -269,7 +269,8 @@ am_libanalyses_la_OBJECTS = src/global/Global.lo \
 	src/analyses/CMS_13TeV/cms_1807_02048.lo \
 	src/analyses/CMS_13TeV/cms_1807_07799.lo \
 	src/analyses/ATLAS_13TeV/atlas_1807_06573.lo \
-	src/analyses/ATLAS_13TeV/atlas_1808_01191.lo
+	src/analyses/ATLAS_13TeV/atlas_1808_01191.lo \
+	src/analyses/ATLAS_13TeV/atlas_1808_01899.lo
 libanalyses_la_OBJECTS = $(am_libanalyses_la_OBJECTS)
 AM_V_lt = $(am__v_lt_@AM_V@)
 am__v_lt_ = $(am__v_lt_@AM_DEFAULT_V@)
@@ -797,7 +798,9 @@ libanalyses_la_SOURCES = src/global/Global.cc src/include/Global.h \
 	include/analyses/ATLAS_13TeV/atlas_1807_06573.h \
 	src/analyses/ATLAS_13TeV/atlas_1807_06573.cc \
 	include/analyses/ATLAS_13TeV/atlas_1808_01191.h \
-	src/analyses/ATLAS_13TeV/atlas_1808_01191.cc
+	src/analyses/ATLAS_13TeV/atlas_1808_01191.cc \
+	include/analyses/ATLAS_13TeV/atlas_1808_01899.h \
+	src/analyses/ATLAS_13TeV/atlas_1808_01899.cc
 #@@extraanalysis@@
 libanalyses_la_LDFLAGS = -avoid-version -shared
 #-module 
@@ -1351,6 +1354,9 @@ src/analyses/ATLAS_13TeV/atlas_1807_06573.lo:  \
 src/analyses/ATLAS_13TeV/atlas_1808_01191.lo:  \
 	src/analyses/ATLAS_13TeV/$(am__dirstamp) \
 	src/analyses/ATLAS_13TeV/$(DEPDIR)/$(am__dirstamp)
+src/analyses/ATLAS_13TeV/atlas_1808_01899.lo:  \
+	src/analyses/ATLAS_13TeV/$(am__dirstamp) \
+	src/analyses/ATLAS_13TeV/$(DEPDIR)/$(am__dirstamp)
 
 libanalyses.la: $(libanalyses_la_OBJECTS) $(libanalyses_la_DEPENDENCIES) $(EXTRA_libanalyses_la_DEPENDENCIES) 
 	$(AM_V_CXXLD)$(libanalyses_la_LINK) -rpath $(mylibdir) $(libanalyses_la_OBJECTS) $(libanalyses_la_LIBADD) $(LIBS)
@@ -1406,6 +1412,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/ATLAS_13TeV/$(DEPDIR)/atlas_1803_02762.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/ATLAS_13TeV/$(DEPDIR)/atlas_1807_06573.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/ATLAS_13TeV/$(DEPDIR)/atlas_1808_01191.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@src/analyses/ATLAS_13TeV/$(DEPDIR)/atlas_1808_01899.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/ATLAS_13TeV/$(DEPDIR)/atlas_conf_2015_082.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/ATLAS_13TeV/$(DEPDIR)/atlas_conf_2016_013.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/ATLAS_13TeV/$(DEPDIR)/atlas_conf_2016_050.Plo@am__quote@
