--- a/tools/fritz/Makefile
+++ b/tools/fritz/Makefile
@@ -345,7 +345,7 @@ PATH_SEPARATOR = :
 PYTHIAINCLUDE = -I/home/shadowquark/code/github/checkmate/tools/pythia/include
 PYTHIALIBDIR = /home/shadowquark/code/github/checkmate/tools/pythia/lib
 PYTHIALIBS = -L/home/shadowquark/code/github/checkmate/tools/pythia/lib -lpythia8 -ldl -lm -lz
-PYTHON = /usr/bin/python
+PYTHON = /home/shadowquark/anaconda2/bin/python
 PYTHON_EXEC_PREFIX = ${exec_prefix}
 PYTHON_PLATFORM = linux2
 PYTHON_PREFIX = ${prefix}
@@ -419,8 +419,8 @@ pkgpythondir = ${pythondir}/checkmate
 prefix = /usr/local
 program_transform_name = s,x,x,
 psdir = ${docdir}
-pyexecdir = ${exec_prefix}/lib/python2.7/dist-packages
-pythondir = ${prefix}/lib/python2.7/dist-packages
+pyexecdir = ${exec_prefix}/lib/python2.7/site-packages
+pythondir = ${prefix}/lib/python2.7/site-packages
 runstatedir = ${localstatedir}/run
 sbindir = ${exec_prefix}/sbin
 sharedstatedir = ${prefix}/com
